# Swift-Search-Agent

./: .env.example  Cargo.toml  Dockerfile  LICENSE  Proxy_Integration_Guide.md  README.md  benchmark_ui.html  config.py  requirements.txt  search_legacy.py  search_optimized.py  search_ultra.py  search_unified.py  ui.html
scripts/: ram_monitor.sh
spaces/private-searxng/: README.md
spaces/swift-scraper-api/: README.md
src/: cache.rs  config.rs  copilot.rs  extractor.rs  llm.rs  main.rs  models.rs  search.rs  stream.rs  url_utils.rs
src/engines/: duckduckgo.rs  generic.rs  mod.rs  mojeek.rs  qwant.rs  yahoo.rs
swift-search-rs/: .gitignore  Cargo.toml
swift-search-rs/src/: config.rs  main.rs  search.rs  url_utils.rs
swift-search-rs/src/engines/: brave.rs  mod.rs  qwant.rs
