[package]
name = "qrux"
version = "5.0.1"
edition = "2021"
description = "High-performance meta-search engine aggregating 90+ search engines with stealth WAF bypass, BM25 ranking, 5-tier content extraction, and optional BYOK LLM synthesis — all in pure Rust"
authors = ["Sandeep"]
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client (rustls + socks proxy support, portable in minimal environments)
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls-tls", "socks"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genai = "0.5"

# HTML parsing & text extraction
scraper = "0.22"
ego-tree = "0.9"

# URL handling
url = "2"

# Regex
regex = "1"

# Randomization
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Environment variables
dotenvy = "0.15"

# Async trait (for engine trait)
async-trait = "0.1"

# URL encoding/decoding
urlencoding = "2"

# Futures utilities (join_all for concurrent engine queries)
futures = "0.3"
tokio-stream = "0.1.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"
